--- a/requirements.txt
+++ b/requirements.txt
@@ -1,161 +1,68 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
-altgraph==0.17.3
-anyio==3.7.0
-appdirs==1.4.4
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
+async-generator==1.10
 async-timeout==4.0.2
-attrs==23.1.0
-backcall==0.2.0
-backoff==2.2.1
-beautifulsoup4==4.12.2
-bleach==6.0.0
+attrs==21.2.0
 blinker==1.6.2
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
 click==8.1.3
-cohere==4.11.2
-comm==0.1.3
+colorama==0.4.4
+configparser==5.1.0
+crayons==0.4.0
+cryptography==35.0.0
 dataclasses-json==0.5.8
-debugpy==1.6.7
-decorator==5.1.1
-deepgram-sdk==2.5.0
-defusedxml==0.7.1
-exceptiongroup==1.1.1
-executing==1.2.0
-fastjsonschema==2.17.1
-ffmpeg-downloader==0.2.0
-ffmpeg-python==0.2.0
-ffprobe==0.5
-filelock==3.12.0
 Flask==2.3.2
-fqdn==1.5.1
 frozenlist==1.3.3
 fsspec==2023.6.0
-future==0.18.3
-gpt4all==0.3.4
+GDAL==3.2.0
 greenlet==2.0.2
-huggingface-hub==0.15.1
-idna==3.4
+h11==0.12.0
+idna==3.3
 importlib-metadata==6.6.0
-importlib-resources==5.12.0
-ipykernel==6.23.1
-ipython==8.12.2
-ipython-genutils==0.2.0
-isoduration==20.11.0
 itsdangerous==2.1.2
-jedi==0.18.2
 Jinja2==3.1.2
-joblib==1.2.0
-jsonlines==3.1.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter_server==2.6.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-langchain==0.0.198
-langchainplus-sdk==0.0.8
-llama-index==0.6.23
-llvmlite==0.40.1rc1
-loguru==0.7.0
-macholib==1.16.2
-markdown-it-py==3.0.0
+langchain==0.0.201
+langchainplus-sdk==0.0.10
+llama-index==0.6.26
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==2.0.5
-more-itertools==9.1.0
-mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.4.0
-nbformat==5.9.0
-nest-asyncio==1.5.6
-networkx==3.1
-nltk==3.8.1
-nomic==1.1.14
-notebook==6.5.4
-notebook_shim==0.2.3
-numba==0.57.0
 numexpr==2.8.4
 numpy==1.24.3
 openai==0.27.8
-openai-whisper==20230314
 openapi-schema-pydantic==1.2.4
-overrides==7.3.1
+outcome==1.1.0
 packaging==23.1
 pandas==2.0.2
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-pkgutil_resolve_name==1.3.10
-platformdirs==3.5.1
-prometheus-client==0.17.0
-prompt-toolkit==3.0.38
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==12.0.1
 pycparser==2.21
 pydantic==1.10.9
-pydub==0.25.1
-Pygments==2.15.1
-pyinstaller==5.12.0
-pyinstaller-hooks-contrib==2023.3
-pyrsistent==0.19.3
+pyOpenSSL==21.0.0
+PyQt5_sip==4.19.24
 python-dateutil==2.8.2
-python-json-logger==2.0.7
 pytz==2023.3
 PyYAML==6.0
-pyzmq==25.1.0
 regex==2023.6.3
 requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.4.2
-safetensors==0.3.1
-Send2Trash==1.8.2
+selenium==4.0.0
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4.1
+sniffio==1.2.0
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.16
-stack-data==0.6.2
-sympy==1.12
 tenacity==8.2.2
-terminado==0.17.1
-tiktoken==0.3.1
-tinycss2==1.2.1
-tokenizers==0.13.3
-torch==2.0.1
-tornado==6.3.2
+tiktoken==0.4.0
 tqdm==4.65.0
-traitlets==5.9.0
-transformers==4.30.1
+trio==0.19.0
+trio-websocket==0.9.2
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2023.3
-uri-template==1.2.0
-urllib3==1.26.16
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-webrtcvad==2.0.10
-websocket-client==1.5.3
-websockets==11.0.3
+urllib3==1.26.7
+webdriver-manager==3.5.2
 Werkzeug==2.3.6
-wonderwords==2.2.0
+wsproto==1.0.0
 yarl==1.9.2
 zipp==3.15.0
