--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dataclasses-json==0.5.8
 frozenlist==1.3.3
 fsspec==2023.6.0
 greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
 joblib==1.2.0
 langchain==0.0.198
