--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,25 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
+blinker==1.6.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 dataclasses-json==0.5.8
+Flask==2.3.2
 frozenlist==1.3.3
 fsspec==2023.6.0
 greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.4
+importlib-metadata==6.6.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 joblib==1.2.0
 langchain==0.0.198
 langchainplus-sdk==0.0.10
 llama-index==0.6.23
+MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 multidict==6.0.4
@@ -41,4 +47,6 @@ typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.16
+Werkzeug==2.3.6
 yarl==1.9.2
+zipp==3.15.0
