--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 dataclasses-json==0.5.8
+deepgram-sdk==2.8.0
 Flask==2.3.2
 frozenlist==1.3.3
 fsspec==2023.6.0
@@ -47,6 +48,7 @@ typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.16
+websockets==11.0.3
 Werkzeug==2.3.6
 yarl==1.9.2
 zipp==3.15.0
