--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.2
 pydantic==1.10.9
+pydub==0.25.1
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0
