--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
 blinker==1.6.2
+cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
@@ -11,6 +12,13 @@ deepgram-sdk==2.8.0
 Flask==2.3.2
 frozenlist==1.3.3
 fsspec==2023.6.0
+google-api-core==2.11.1
+google-auth==2.22.0
+google-cloud-core==2.3.3
+google-cloud-storage==2.10.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.1
 greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.4
@@ -33,6 +41,9 @@ openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.2
+protobuf==4.23.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pydantic==1.10.9
 pydub==0.25.1
 python-dateutil==2.8.2
@@ -40,6 +51,7 @@ pytz==2023.3
 PyYAML==6.0
 regex==2023.6.3
 requests==2.31.0
+rsa==4.9
 six==1.16.0
 SQLAlchemy==2.0.16
 tenacity==8.2.2
